add full logo url

--- a/ButterflyAspect/ButterflyAspect.html
+++ b/ButterflyAspect/ButterflyAspect.html
@@ -1,7 +1,7 @@
 <div class="sheet-container">
 	<div class="sheet-float sheet-head">
 		<div class="sheet-float sheet-head-logo">
-			<img class="sheet-logo" src="img/logo.png" alt="AnzahCraft" />
+			<img class="sheet-logo" src="https://img.anzahcraft.de/logo-roll20.png" alt="AnzahCraft" />
 			<div class="sheet-gmroll">
 				<select name="attr_gmroll">
 					<option value="nogm" selected="selected">Für alle sichtbar w&uuml;rfelt</option>
