[Anima Beyond Fantasy] Bugfix Trad FR + CSS (#5802)
* Update fr.json

* Update A-BF.css

* Update fr.json

* Update fr.json

* Update fr.json

* Update A-BF.html

* Update A-BF.css

* Update A-BF.html

* Update A-BF.html

* Update A-BF.html

--- a/Anima-Beyond-Fantasy/A-BF.html
+++ b/Anima-Beyond-Fantasy/A-BF.html
@@ -1186,7 +1186,7 @@
 	});
 	
 	//Initiative
-	on("change:agi_mod change:dex_mod change:repeating_initiative:init_armor change:repeating_initiative:init_weapon change:repeating_initiative:init_special change:classe_Init_Sum change:ki_increasedSpeed change:aam change:AMTransDraSceaux sheet:opened", function ()
+	on("change:agi_mod change:dex_mod change:repeating_initiative change:classe_Init_Sum change:ki_increasedSpeed change:aam change:AMTransDraSceaux sheet:opened", function ()
 	{
 		
 		getSectionIDs("repeating_initiative", function (ids) 
@@ -2982,6 +2982,27 @@
 				});
 			}
 		});
+		
+		getAttrs(["gold_option", "update_2"], function(values) 
+		{
+			var getUpdated = parseInt(values["update_2"], 10)||0;
+			
+			if(getUpdated != 1)
+			{
+				var gold = parseInt(values["gold_option"], 10)||0;
+				
+				if(gold != 0)
+				{
+					setAttrs({
+						gc_amount:gold	
+					});
+				}
+				
+				setAttrs({
+					update_2:1	
+				});
+			}
+		});
 
 		setAttrs({
 			modifiersTrad: getTranslationByKey("modifiers"),
@@ -3108,6 +3129,7 @@
 	</label>
 </div>
 <input type="hidden" name="attr_update_1" value="0" readonly />
+<input type="hidden" name="attr_update_2" value="0" readonly />
 <input type="hidden" name="attr_update_1MS" value="0" readonly />
 <input type="hidden" name="attr_aap" value="((((@{aam})+(@{AMTransDraSceaux}*5)) - abs((@{aam}+(@{AMTransDraSceaux}*5)))) / 2)" disabled />
 <input type="hidden" name="attr_tab" class="tabExtend" value="1" />
@@ -8554,7 +8576,7 @@
 		<div>
 			<input type="hidden" name="attr_gold_option" value="0" />
 			<label>
-				<input type="number" name="attr_gold_option" value="0" min="0" />
+				<input type="number" name="attr_gc_amount" value="0" min="0" />
 				<span data-i18n="gold-coins">Gold Coins</span>
 			</label>
 			<div class="extend">
