--- a/Fallout-Vaults-and-Deathclaws/Fallout-VnV.html
+++ b/Fallout-Vaults-and-Deathclaws/Fallout-VnV.html
@@ -27,10 +27,6 @@
             <input type="text" class="sheet-text_left" name="attr_titlecharacter_race" value="Race" readonly />&nbsp;<input type="text" class="sheet-text_right" name="attr_character_race"  />
             <input type="text" class="sheet-text_left" name="attr_titlecharacter_karma_alignment" value="Karma" readonly />&nbsp;<input type="text" class="sheet-text_right" name="attr_character_karma_alignment"  />
         </div>
-        <div>
-            <input type="text" class="sheet-text_left" name="attr_titletotal_caps" value="Caps" readonly />&nbsp;<input type="text" class="sheet-text_right" name="attr_total_caps"  />
-            <input type="text" class="sheet-text_left" name="attr_titlecharacter_alive" value="Alive" readonly />&nbsp;<input type="text" class="sheet-text_right" name="attr_character_vault_alive"  />
-        </div>
     </div>
     
     <h3 style="width:98%">Primary Statistics</h3>
@@ -981,6 +977,8 @@
             <input type="text" class="sheet-number" name="attr_total_carry_weight" style='width:10%'/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <input type="text" class="sheet-text_damage" value="Current Carry Weight" readonly />&nbsp;
             <input type="text" class="sheet-number" name="attr_current_carry_weight" style='width:10%'/>
+            <input type="text" class="sheet-text_damage" value="Caps" readonly />&nbsp;
+            <input type="text" class="sheet-number" name="attr_caps" style='width:10%'/>
         </div>
         <div>
             <textarea name="attr_item_text" style="width:98%;height:10%"></textarea>
