--- a/Stargate-RPG/stargate.html
+++ b/Stargate-RPG/stargate.html
@@ -1,4 +1,5 @@
-
+<input type="radio" name="attr_tab" class="tab tab1" value="1" checked="checked"><span title="Main"></span>
+<input type="radio" name="attr_tab" class="tab tab2" value="2"                  ><span title="Background"></span>
 <!-- 
 <div>
     <button type="action" name="act_character" >Character</button>
@@ -10,7 +11,7 @@
 <!--  --------------------------------------------------------------------------------- -->
 <!--  --------------------------- PAGE 1 ---------------------------------------------- -->
 <!--  --------------------------------------------------------------------------------- -->
-<div class="sheet-character">
+<div class="tab-content tab1 page1">
 
 <!-- NAME SECTION -->
   <div class="name section columnflex nowrap">
@@ -251,10 +252,15 @@
 
   <div class="hp rowflex nowrap">
     <div class="section columnflex nowrap middle center">
-      <label class=" txtcenter">HP</label>
-      <input name="attr_hp" type="number" value="20" class="stat w40">
+      <label class="txtcenter">HP</label>
+      <div class="rowflex nowrap">
+        <input name="attr_hp" type="number" value="20" class="stat w40">
+        <span class="slash">/</span>
+        <input name="attr_hp_max" type="number" value="20" class="stat w40"> 
+      </div>
+      
     </div>
-    <div class="section columnflex nowrap middle center">
+    <div class="section columnflex nowrap middle center determ">
       <label class="">determination</label>
       <input name="attr_determination" type="number" value="" class="stat w70">
     </div>
@@ -264,7 +270,7 @@
 <!-- condition -->
 
   <div class="condition section columnflex nowrap spaced">
-    <h3>condition</h3>
+    <h2 class="txtcenter">Condition</h2>
     <div class="rowflex nowrap">
       <input name="attr_condition" type="radio" value="0" checked="true">
       <span>Normal</span>
@@ -303,7 +309,7 @@
       <label class="wide">Prof Bonus</label>
       <input name="attr_prof" type="number" value="2" class="stat w40">
     </div>
-    <div class="section columnflex nowrap middle center">
+    <div class="section columnflex nowrap middle center init">
       <button name="roll_init" type="roll" value="&{template:default} {{name=**Initiative**}} {{[[d20+(@{init}) &{tracker}]]=[[d20+(@{init}) &{tracker}]]}}" class="txt-btn">Initiative</button>
       <input name="attr_init" type="number" value="0" class="stat w40">
     </div>
@@ -322,7 +328,7 @@
       <input name="attr_ac" type="number" value="10" class="stat w70">
     </div>
     <div class="section columnflex nowrap middle center">
-      <label class="">AC extra</label>
+      <label class="txtcenter">AC extra</label>
       <input name="attr_ac_extra" type="number" value="10" class="stat w70">
     </div>
   </div>
@@ -332,7 +338,7 @@
 
   <div class="speed rowflex nowrap">
     <div class="section columnflex nowrap middle center">
-      <label class="bold">Speed</label>
+      <label class="bold txtcenter">Speed</label>
       <input name="attr_speed" type="text" value="5m" class="w70 stat">
     </div>
     <div class="section death columnflex nowrap middle center">
@@ -418,7 +424,7 @@
     <span class="name bold">Attack name</span>
     <span class="bold">to hit</span>
     <span class="bold pl20">dmg</span>
-    <span class="bold">dmg type</span>
+    <span class="bold dmg-type">type</span>
     <span class="bold">range</span>
     <span class="bold">reload</span>
     <span class="bold pl20">special</span>
@@ -435,7 +441,7 @@
       <input name="attr_attack1_dmg" type="text" class="w70 mr15">
     </div>
     <div>
-      <input name="attr_attack1_dmgtype" type="text" class="w40">
+      <input name="attr_attack1_dmgtype" type="text" class="w50">
     </div>
     <div>
       <input name="attr_attack1_range" type="text" class="w40">
@@ -459,7 +465,7 @@
       <input name="attr_attack2_dmg" type="text" class="w70 mr15">
     </div>
     <div>
-      <input name="attr_attack1_dmgtype" type="text" class="w40">
+      <input name="attr_attack2_dmgtype" type="text" class="w50">
     </div>
     <div>
       <input name="attr_attack2_range" type="text" class="w40">
@@ -483,7 +489,7 @@
       <input name="attr_attack3_dmg" type="text" class="w70 mr15">
     </div>
     <div>
-      <input name="attr_attack1_dmgtype" type="text" class="w40">
+      <input name="attr_attack3_dmgtype" type="text" class="w50">
     </div>
     <div>
       <input name="attr_attack3_range" type="text" class="w40">
@@ -507,7 +513,7 @@
       <input name="attr_attack4_dmg" type="text" class="w70 mr15">
     </div>
     <div>
-      <input name="attr_attack1_dmgtype" type="text" class="w40">
+      <input name="attr_attack4_dmgtype" type="text" class="w50">
     </div>
     <div>
       <input name="attr_attack4_range" type="text" class="w40">
@@ -531,7 +537,7 @@
       <input name="attr_attack5_dmg" type="text" class="w70 mr15">
     </div>
     <div>
-      <input name="attr_attack1_dmgtype" type="text" class="w40">
+      <input name="attr_attack5_dmgtype" type="text" class="w50">
     </div>
     <div>
       <input name="attr_attack5_range" type="text" class="w40">
@@ -550,18 +556,51 @@
 <!--  --------------------------------------------------------------------------------- -->
 <!--  --------------------------- PAGE 2 ---------------------------------------------- -->
 <!--  --------------------------------------------------------------------------------- -->
-<div class="sheet-journal">
+<div class="tab-content tab2 page2">
+
+  <div class="section racial_abilities columnflex nowra center">
+    <label>Racial Abilities</label>
+    <textarea name="attr_racial"></textarea>
+  </div>
+
+  <div class="section feats columnflex nowrap center">
+    <label>Feats</label>
+    <textarea name="attr_feats"></textarea>
+  </div>
+
+  <div class="section class columnflex nowrap center">
+    <label>Class Abilities</label>
+    <textarea name="attr_class_abilities"></textarea>
+  </div>
+
+  <div class="section equipment columnflex nowrap center">
+    <label>Equipment</label>
+    <textarea name="attr_equipment"></textarea>
+  </div>
+
+  <div class="section prof columnflex nowrap center">
+    <label>Proficiencies</label>
+    <textarea name="attr_proficiencies"></textarea>
+  </div>
+
+  <div class="section notes columnflex nowrap center">
+    <label>Notes</label>
+    <textarea name="attr_notes"></textarea>
+  </div>
+
 
 </div>
 
 <!--  --------------------------------------------------------------------------------- -->
 <!--  --------------------------- PAGE 3 ---------------------------------------------- -->
 <!--  --------------------------------------------------------------------------------- -->
+
+<!--
 <div class="sheet-config">
     <h2>Config/Settings</h2>
     <span>Sheet Config/Settings goes here</span> 
 </div>
-
+-->
 <!--  --------------------------------------------------------------------------------- -->
 <!--  --------------------------- Sheet workers --------------------------------------- -->
 <!--  --------------------------------------------------------------------------------- -->
