Change button start value !test => !damage or !wp-damage for new Api script compatibility.

--- a/Cyberpunk2k20_v2/Cyberpunk2k20.html
+++ b/Cyberpunk2k20_v2/Cyberpunk2k20.html
@@ -88,7 +88,7 @@
                 <input type="checkbox" name="attr_meleedmg" value="@{dm}"/>
                 <div style="float:right; width:90px;">
                     <button style="margin-left:42px;" class="ranged add-dice" type="roll" value="&{template:dmg}{{name=@{character_name}}}{{dmg=[[@{nb_dice}@{type_dice}+@{add_dmg}+@{meleedmg}]]}}{{loc=[[@{loc}]]}}{{dmgCrt=[[1d10]]}}"><strong>Damages</strong></button>
-                    <button type="roll" value="!test 0 @{target|token_id} @{nb_dice} @{type_dice} @{add_dmg} @{meleedmg} @{loc} ?{AP|Normal,1/1|SP/2,2|SP/3,3|SP/4,4} ?{Damage|x1,*v1|÷2,/v2|x2,*v2} ?{nb hits|1}">Damages (API)</button>
+                    <button type="roll" value="!damage 0 @{target|token_id} @{nb_dice} @{type_dice} @{add_dmg} @{meleedmg} @{loc} ?{AP|Normal,1/1|SP/2,2|SP/3,3|SP/4,4} ?{Damage|x1,*v1|÷2,/v2|x2,*v2} ?{nb hits|1}">Damages (API)</button>
                 </div>
             </div>
             <div style="margin-top:-10px;">
@@ -2147,8 +2147,9 @@
                 <input type="checkbox" class="edit-wp" name="attr_edit-wp"/>
                 <h5 style="margin:0;">Weapons list
                     <button type="roll" value="!selecta @{selected|token_id}">Reload</button>
-                    <button type="roll" value="!show @{selected|token_id}">Show</button> <button type="roll" value="!damage @{selected|token_id} 0 0 0 0 @{meleedmg} @{loc} ?{AP|Normal,1/1|SP/2,2|SP/3,3|SP/4,4} 0 ?{nb hits|1}">Damage</button>
-                    <button type="roll" value="!test @{selected|token_id} @{target|token_id} @{nb_dice} @{type_dice} @{add_dmg} @{meleedmg} @{loc} ?{AP|Normal,1/1|SP/2,2|SP/3,3|SP/4,4} ?{Damage|x1,*v1|÷2,/v2|x2,*v2} ?{nb hits|1}">Damages (Target)</button>
+                    <button type="roll" value="!show @{selected|token_id}">Show</button>
+                    <button type="roll" value="!wp-damage @{selected|token_id} 0 0 0 0 @{meleedmg} @{loc} ?{AP|Normal,1/1|SP/2,2|SP/3,3|SP/4,4} 0 ?{nb hits|1}">Damage</button>
+                    <button type="roll" value="!wp-damage @{selected|token_id} @{target|token_id} @{nb_dice} @{type_dice} @{add_dmg} @{meleedmg} @{loc} ?{AP|Normal,1/1|SP/2,2|SP/3,3|SP/4,4} ?{Damage|x1,*v1|÷2,/v2|x2,*v2} ?{nb hits|1}">Damages (Target)</button>
                 </h5>
                 <ul class="wp-stat">
                     <fieldset class="repeating_wp">
