added intial moves

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -4070,8 +4070,8 @@
                 </div>
             </div>
         </div>
-        <div class="sheet-oracle-column">
 
+        <div class="sheet-oracle-column">
             <input type="radio" class="sheet-action sheet-hidden" id="actionOracle" name="attr_previewtable"
                 value="1" />
             <div class="sheet-action sheet-hidden-flex">
@@ -6650,6 +6650,50 @@
             </div>
         </div>
     </fieldset>
+</div>
+<div class="page6tab">
+    <hr>
+    <div class="sheet-moves-container">
+        <div class="sheet-move-column">
+            <div class="sheet-move-box">
+                <div class="sheet-move-title">ADVENTURE MOVES</div>
+                <div class="sheet-move">
+                    <div class="sheet-button-container">
+                        <button type="roll" id="xmoveRoll" title="x move" name="rollxmove"
+                            value="&{template:ironswornmoves} {{header=x move}} {{x=[[1d100]]}}"></button>
+                    </div>
+                    <label class="sheet-move-show" for="xmove">Face Danger</label>
+                </div>
+            </div>
+        </div>
+
+        <div class="sheet-move-column">
+            <input type="radio" class="sheet-challenge-rank sheet-hidden" id="challengeRankmove"
+                name="attr_previewtable" value="21" />
+            <div class="sheet-challenge-rank sheet-hidden-flex">
+                <div class="sheet-move-title sheet-move-table-preview">Face Danger</div>
+                <div class="sheet-move-description">
+                    When <b>you attempt something risky or react to an imminent threat,</b> envision your action and roll. If you act...
+                    <ul>
+                        <li>With speed, agility, or precision: Roll +edge.</li>
+                        <li>With charm, loyalty, or courage: Roll +heart.</li>
+                        <li>With aggressive action, forceful defense, strength, or endurance: Roll +iron.</li>
+                        <li>With deception, stealth, or trickery: Roll +shadow.</li>
+                        <li>With expertise, insight, or observation: Roll +wits.</li>
+                    </ul>
+                    On a <b>strong hit,</b> you are successful. Take +1 momentum.
+                    On a <b>weak hit,</b> you succeed, but face a troublesome cost. Choose one.
+                    <ul>
+                        <li>You are delayed, lose advantage, or face a new danger: Suffer -1 momentum.</li>
+                        <li>You are tired or hurt: <em>Endure Harm</em> (1 harm).</li>
+                        <li>You are dispirited or afraid: <em>Endure Stress</em>  (1 stress).</li>
+                        <li>You sacrifice resources: Suffer -1 supply.</li>
+                    </ul>
+                    On a <b>miss,</b> you fail, or your progress is undermined by a dramatic and costly turn of events. <em>Pay the Price.</em>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <hr>
 <table>
