--- a/Fallout-Vaults-and-Deathclaws/Fallout-VnV.html
+++ b/Fallout-Vaults-and-Deathclaws/Fallout-VnV.html
@@ -173,6 +173,13 @@
             <input type="text"   class="sheet-number_formula" name="attr_basetext_skill_points" value="5 + (IN x 3)" readonly />
         </div>
         <div>
+            <input type="text" class="sheet-text_statsname" value="System Shock" readonly />
+            <input type="number" class="sheet-number" name="attr_system_shock" value='@{mod_system_shock} + @{base_system_shock}' disabled="true"/>
+            <input type="number" class="sheet-number"name="attr_mod_system_shock" value="0" />
+            <input type="number" class="sheet-number" name="attr_base_system_shock" value='(round((@{endurance_mod} + @{endurance_base})/2))' disabled="true" />
+            <input type="text"   class="sheet-number_formula" name="attr_basetext_system_shock" value="EN / 2" readonly />
+        </div>
+        <div>
             <input type="text" class="sheet-text_statsname" value="Addiction Res." readonly />
             <input type="number" class="sheet-number" name="attr_addiction_radiation" value='@{mod_resistance_addiction} + @{base_resistance_addiction}' disabled="true"/>
             <input type="number" class="sheet-number"name="attr_mod_resistance_addiction" value="0" />
