fixed styling and added oracles

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -76,6 +76,9 @@
 <input type="radio" class="sheet-pages sheet-page8" name="attr_pagenumber" title="Page 8" value="8" />
 <span class="sheet-page-label sheet-page-label-8">Themes & Domains</span>
 
+<input type="radio" class="sheet-pages sheet-page9" name="attr_pagenumber" title="Page 9" value="9" />
+<span class="sheet-page-label sheet-page-label-9">Delve Oracles</span>
+
 <div class="page1tab">
     <hr class="sheet-nav-bottom">
     <table>
@@ -8850,6 +8853,116 @@
                 </div>
             </div>
 
+        </div>
+    </div>
+</div>
+
+<div class="page9tab">
+    <hr class="sheet-nav-bottom">
+    <div class="sheet-oracle-container">
+        <div class="sheet-oracle-column">
+
+            <div class="sheet-oracle-box">
+                <div class="sheet-oracle-title">Feature</div>
+                <div class="sheet-oracle">
+                    <div class="sheet-button-container">
+                        <button type="roll" id="actionOracleRoll" title="Action Oracle" name="rollactionoracle"
+                            value="&{template:ironswornoracles} {{header=Action Oracle}} {{action=[[d100]]}}"></button>
+                    </div>
+                    <label class="sheet-oracle-show" for="actionOracle">Action</label>
+                </div>
+            </div>
+
+            <div class="sheet-oracle-box">
+                <div class="sheet-oracle-title">Site Name</div>
+                <div class="sheet-oracle">
+                    <div class="sheet-button-container">
+                        <button type="roll" id="actionOracleRoll" title="Action Oracle" name="rollactionoracle"
+                            value="&{template:ironswornoracles} {{header=Action Oracle}} {{action=[[d100]]}}"></button>
+                    </div>
+                    <label class="sheet-oracle-show" for="actionOracle">Action</label>
+                </div>
+            </div>
+
+            <div class="sheet-oracle-box">
+                <div class="sheet-oracle-title">Site Nature</div>
+                <div class="sheet-oracle">
+                    <div class="sheet-button-container">
+                        <button type="roll" id="actionOracleRoll" title="Action Oracle" name="rollactionoracle"
+                            value="&{template:ironswornoracles} {{header=Action Oracle}} {{action=[[d100]]}}"></button>
+                    </div>
+                    <label class="sheet-oracle-show" for="actionOracle">Action</label>
+                </div>
+            </div>
+
+            <div class="sheet-oracle-box">
+                <div class="sheet-oracle-title">Character</div>
+                <div class="sheet-oracle">
+                    <div class="sheet-button-container">
+                        <button type="roll" id="actionOracleRoll" title="Action Oracle" name="rollactionoracle"
+                            value="&{template:ironswornoracles} {{header=Action Oracle}} {{action=[[d100]]}}"></button>
+                    </div>
+                    <label class="sheet-oracle-show" for="actionOracle">Action</label>
+                </div>
+            </div>
+
+            <div class="sheet-oracle-box">
+                <div class="sheet-oracle-title">Monstrosity</div>
+                <div class="sheet-oracle">
+                    <div class="sheet-button-container">
+                        <button type="roll" id="actionOracleRoll" title="Action Oracle" name="rollactionoracle"
+                            value="&{template:ironswornoracles} {{header=Action Oracle}} {{action=[[d100]]}}"></button>
+                    </div>
+                    <label class="sheet-oracle-show" for="actionOracle">Action</label>
+                </div>
+            </div>
+
+            <div class="sheet-oracle-box">
+                <div class="sheet-oracle-title">Trap</div>
+                <div class="sheet-oracle">
+                    <div class="sheet-button-container">
+                        <button type="roll" id="actionOracleRoll" title="Action Oracle" name="rollactionoracle"
+                            value="&{template:ironswornoracles} {{header=Action Oracle}} {{action=[[d100]]}}"></button>
+                    </div>
+                    <label class="sheet-oracle-show" for="actionOracle">Action</label>
+                </div>
+            </div>
+
+            <div class="sheet-oracle-box">
+                <div class="sheet-oracle-title">Combat Event</div>
+                <div class="sheet-oracle">
+                    <div class="sheet-button-container">
+                        <button type="roll" id="actionOracleRoll" title="Action Oracle" name="rollactionoracle"
+                            value="&{template:ironswornoracles} {{header=Action Oracle}} {{action=[[d100]]}}"></button>
+                    </div>
+                    <label class="sheet-oracle-show" for="actionOracle">Action</label>
+                </div>
+            </div>
+
+            <div class="sheet-oracle-box">
+                <div class="sheet-oracle-title">Threat</div>
+                <div class="sheet-oracle">
+                    <div class="sheet-button-container">
+                        <button type="roll" id="actionOracleRoll" title="Action Oracle" name="rollactionoracle"
+                            value="&{template:ironswornoracles} {{header=Action Oracle}} {{action=[[d100]]}}"></button>
+                    </div>
+                    <label class="sheet-oracle-show" for="actionOracle">Action</label>
+                </div>
+            </div>
+        </div>
+
+        <div class="sheet-oracle-column">
+            <input type="radio" class="sheet-action sheet-hidden" id="actionOracle" name="attr_previewtable"
+                value="1" />
+            <div class="sheet-action sheet-hidden-flex">
+                <div class="sheet-oracle-title sheet-oracle-table-preview">ACTION</div>
+                <div class="sheet-oracle-table sheet-oracle-table-3-column">
+                    <div class="oracle-row sheet-oracle-row-3-column">
+                        <span class="oracle-roll">1</span>
+                        <span class="sheet-oracle-result-3-column">Scheme</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
