added page references for moves

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -7902,6 +7902,7 @@
                     </ul>
                     <p>If you are returning to a previously explored site, roll both challenge dice, take the lowest value, and clear that number of progress boxes. Then, <em>Delve the Depths</em> to explore this place.</p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Delve - page 19</div>
             </div>
 
             <input type="radio" class="sheet-delve-the-depths sheet-hidden" id="delveTheDepthsMove"
@@ -7921,7 +7922,7 @@
                     </p>On a <strong>miss,</strong> <em>Reveal a Danger.</em></p>
                 </div>
                 <div class="sheet-move-table">
-                    <div class="sheet-oracle-row">
+                    <div class="sheet-move-delve-row-header">
                         <div class="sheet-move-delve-column-stat-header">Edge</div>
                         <div class="sheet-move-delve-column-stat-header">Shadow</div>
                         <div class="sheet-move-delve-column-stat-header">Wits</div>
@@ -7958,6 +7959,7 @@
                         <div class="sheet-move-delve-column">Mark progress twice and <em>Reveal a Danger.</em></div>
                     </div>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Delve - page 21</div>
             </div>
 
             <input type="radio" class="sheet-find-opportunity sheet-hidden" id="findOpportunityMove"
@@ -8019,9 +8021,7 @@
                         <span class="sheet-oracle-result">You encounter a denizen in need of help.</span>
                     </div>
                 </div>
-                <div class="sheet-move-description">
-                    <p><em>(page 68)</em></p>
-                </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Delve - page 30</div>
             </div>
 
             <input type="radio" class="sheet-reveal-danger sheet-hidden" id="revealDangerMove" name="attr_movepreview"
@@ -8085,9 +8085,7 @@
                             the same result, make it worse.</span>
                     </div>
                 </div>
-                <div class="sheet-move-description">
-                    <p><em>(page 68)</em></p>
-                </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Delve - page 34</div>
             </div>
 
             <input type="radio" class="sheet-check-gear sheet-hidden" id="checkGearMove" name="attr_movepreview"
@@ -8104,8 +8102,8 @@
                         supply.</p>
                     <p>On a <strong>miss,</strong> you don’t have it and the situation grows more perilous. <em>Pay the
                             Price.</em></p>
-                    <p><em>(page 38)</em></p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Delve - page 38</div>
             </div>
 
             <input type="radio" class="sheet-locate-objective sheet-hidden" id="locateObjectiveMove"
@@ -8130,8 +8128,8 @@
                         objective, or you discover that this site holds unexpected depths. If you continue your
                         exploration, clear all but one filled progress and raise the site’s rank by one (if not
                         already epic).</p>
-                    <p><em>(page 40)</em></p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Delve - page 40</div>
             </div>
 
             <input type="radio" class="sheet-escape-the-depths sheet-hidden" id="escapeTheDepthsMove"
@@ -8161,8 +8159,8 @@
                     </ul>
                     <p>On a <strong>miss,</strong> a dire threat or imposing obstacle stands in your way. <em>Reveal a
                             Danger.</em> If you survive, you may make your escape.</p>
-                    <p><em>(page 68)</em></p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Delve - page 42</div>
             </div>
 
             <input type="radio" class="sheet-reveal-danger-alt sheet-hidden" id="revealDangerAltMove"
@@ -8226,9 +8224,7 @@
                             the same result, make it worse.</span>
                     </div>
                 </div>
-                <div class="sheet-move-description">
-                    <p><em>(page 68)</em></p>
-                </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Delve - page 68</div>
             </div>
 
             <input type="radio" class="sheet-wield-rarity sheet-hidden" id="wieldRarityMove" name="attr_movepreview"
@@ -8247,8 +8243,8 @@
                         Take +1 momentum. </p>
                     <p>On a <strong>miss</strong> with 1 showing on the rarity die, the rarity’s power fails or works
                         against you.</p>
-                    <p><em>(page 176)</em></p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Delve - page 176</div>
             </div>
 
             <input type="radio" class="sheet-mark-failure sheet-hidden" id="markFailureMove" name="attr_movepreview"
@@ -8260,7 +8256,7 @@
                         <strong>you score a miss
                             when making a progress move,</strong> mark two ticks.</p>
                 </div>
-                <p><em>(page 58)</em></p>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Delve - page 58</div>
             </div>
 
             <input type="radio" class="sheet-learn-from-failures sheet-hidden" id="learnFromFailuresMove"
@@ -8287,8 +8283,8 @@
                     </p>On a <strong>miss</strong>, you’ve learned the wrong lessons. Take 1 experience and clear all
                     progress. Then,
                     envision how you set off on an ill-fated path. </p>
-                    <p><em>(page 59)</em></p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Delve - page 59</div>
             </div>
 
             <input type="radio" class="sheet-advance-threat sheet-hidden" id="advanceThreatMove" name="attr_movepreview"
@@ -8323,8 +8319,8 @@
                     <p>If <strong>you mark the last box on the threat’s menace track,</strong> the threat achieves its
                         goal, or the final
                         dire outcome occurs. You must <em>Forsake Your Vow.</em></p>
-                    <p><em>(page 155)</em></p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Delve - page 155</div>
             </div>
 
             <input type="radio" class="sheet-take-hiatus sheet-hidden" id="takeHiatusMove" name="attr_movepreview"
@@ -8341,8 +8337,8 @@
                         <li>Set your momentum to its reset value.</li>
                     </ul>
                     <p>Then, for each active threat, <em>Advance a Threat.</em></p>
-                    <p><em>(page 158)</em></p>
                 </div>
+                <div class="sheet-oracle-footer sheet-move-page-footer">Delve - page 158</div>
             </div>
 
         </div>
@@ -8475,7 +8471,7 @@
                     <div class="sheet-denizen-row">
                         <div class="sheet-denizen-column">
                             <p class="sheet-denizen-title">Very Common 01-27</p><input type="text"
-                                class="sheet-denizen-input sheet-denizen-background" name="attr_vCommonDen"
+                                class="sheet-denizen-input sheet-denizen-background" name="attr_vCommonDen1"
                                 placeholder="Denizen">
                         </div>
                         <div class="sheet-denizen-column">
@@ -8497,44 +8493,44 @@
                     <div class="sheet-denizen-row">
                         <div class="sheet-denizen-column">
                             <p class="sheet-denizen-title">Uncommon 70-75</p><input type="text"
-                                class="sheet-denizen-input sheet-denizen-background" name="attr_vCommonDen"
+                                class="sheet-denizen-input sheet-denizen-background" name="attr_uncommonDen1"
                                 placeholder="Denizen">
                         </div>
                         <div class="sheet-denizen-column">
                             <p class="sheet-denizen-title">Uncommon 76-81</p><input type="text"
-                                class="sheet-denizen-input sheet-denizen-background" name="attr_CommonDen1"
+                                class="sheet-denizen-input sheet-denizen-background" name="attr_uncommonDen2"
                                 placeholder="Denizen">
                         </div>
                         <div class="sheet-denizen-column">
                             <p class="sheet-denizen-title">Uncommon 82-87</p><input type="text"
-                                class="sheet-denizen-input sheet-denizen-background" name="attr_CommonDen2"
+                                class="sheet-denizen-input sheet-denizen-background" name="attr_uncommonDen3"
                                 placeholder="Denizen">
                         </div>
                         <div class="sheet-denizen-column">
                             <p class="sheet-denizen-title">Uncommon 88-93</p><input type="text"
-                                class="sheet-denizen-input sheet-denizen-background" name="attr_CommonDen3"
+                                class="sheet-denizen-input sheet-denizen-background" name="attr_uncommonDen4"
                                 placeholder="Denizen">
                         </div>
                     </div>
                     <div class="sheet-denizen-row">
                         <div class="sheet-denizen-column">
                             <p class="sheet-denizen-title">Rare 94-95</p><input type="text"
-                                class="sheet-denizen-input sheet-denizen-background" name="attr_vCommonDen"
+                                class="sheet-denizen-input sheet-denizen-background" name="attr_rareDen1"
                                 placeholder="Denizen">
                         </div>
                         <div class="sheet-denizen-column">
                             <p class="sheet-denizen-title">Rare 96-97</p><input type="text"
-                                class="sheet-denizen-input sheet-denizen-background" name="attr_CommonDen1"
+                                class="sheet-denizen-input sheet-denizen-background" name="attr_rareDen2"
                                 placeholder="Denizen">
                         </div>
                         <div class="sheet-denizen-column">
                             <p class="sheet-denizen-title">Rare 98-99</p><input type="text"
-                                class="sheet-denizen-input sheet-denizen-background" name="attr_CommonDen2"
+                                class="sheet-denizen-input sheet-denizen-background" name="attr_rareDen3"
                                 placeholder="Denizen">
                         </div>
                         <div class="sheet-denizen-column">
                             <p class="sheet-denizen-title">Unforeseen 00</p><input type="text"
-                                class="sheet-denizen-input sheet-denizen-background" name="attr_CommonDen3"
+                                class="sheet-denizen-input sheet-denizen-background" name="attr_unforeseenDen1"
                                 placeholder="Denizen">
                         </div>
                     </div>
