added threat reminder

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -304,6 +304,10 @@
                         <h5>Epic</h5>
                     </div>
                     <div class="sheet-vow">
+                        <div class="sheet-threat-row">
+                            <input class="sheet-clear-vow" type="checkbox" name="attr_vow1-0-threat">
+                            <span class="sheet-vow-clear-label">Threat</span>
+                        </div>
                         <div>
                             <input class="sheet-clear-vow sheet-hidden" type="radio" name="attr_clear_vow" value="0">
                             <input class="sheet-clear-vow" type="radio" name="attr_clear_vow" value="1">
